# simpro_intermediate_caching_system

./: README.md  ToDo.md  ngrok.yml
prepare-specification/: acquire.sh  main.py  required  singular_rewrite.py
prepare-specification/output/: init.sql  openapi.yaml
prepare-specification/utils/: __init__.py  config.py  logging.py  processor.py  serialize.py  sql.py
simpro-incremental-caching-system/: Cargo.toml  build.rs  init.sql  openapi.yaml  rustfmt.toml
simpro-incremental-caching-system/src/: api.rs  main.rs
simpro-incremental-caching-system/src/db/: enums.rs  mod.rs  row.rs  table.rs
simpro-incremental-caching-system/src/webhook/: mod.rs  query.rs
